# pytest-cs

./: .gitignore  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  pytest-debug.ini  pytest.ini  pytest_cs.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
docs/: index.md
pytest_cs/: __init__.py  bouncer.py  compose.py  deb.py  docker.py  k8s.py  misc.py  plugin.py  rootcheck.py  rpm.py
pytest_cs/lib/: cscli.py  nocolor.py  text.py
src/pytest_cs/: __init__.py  bouncer.py  compose.py  cscli.py  deb.py  docker.py  helpers.py  k8s.py  misc.py  plugin.py  rootcheck.py  rpm.py  waiters.py
src/pytest_cs/lib/: cscli.py  text.py
tests/: test_container.py  test_crowdsec.py  test_cs.py  test_fixtures.py  test_nocolor.py  test_text.py
