[project]
name = "pytest_cs"
version = "0.7.20"
license = "MIT"
description = "Pytest fixtures for crowdsec"
readme = "README.md"
authors = [
    { email = "marco@crowdsec.net" }
]
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "psutil>=6.1.1",
    "pytest>=8.3.4",
    "pytest-datadir>=1.5.0",
    "pytest-dotenv>=0.5.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "trustme>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.25.0",
    "ruff>=0.9.3",
    "types-docker>=7.1.0.20241229",
    "types-psutil>=6.1.0.20241221",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20241016",
]

[project.entry-points.'pytest11']
cs = "pytest_cs"

[tool.ruff]

line-length = 120

[tool.ruff.lint]
select = [
  "ALL"
]

ignore = [
    "B008",     # Do not perform function calls in argument defaults
    "S101",     # Use of 'assert' detected
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
    "D203",     # incorrect-blank-line-before-class
    "D213",     # multi-line-summary-second-line
    "ERA001",   # Found commented-out code
    "W391",     # Black line at end of file
    "FIX003",   # Line contains XXX, consider resolving the issue
    "TD001",    # Invalid TODO tag: `XXX`
    "TD002",    # Missing author in TODO
    "TD003",    # Missing issue link for this TODO
    "TD004",    # Missing colon in TODO

    "ANN",      # Missing type annotations
    "COM812",   # Trailing comma missing

    "PT022", "PLW0603", "S607", "S603", "ARG001", "SIM105", "PTH110", "T201", "EM101", "TRY003",
    "D415", "D403", "EM102", "TRY002", "N801", "S113", "FIX002", "TD005", "RET503",
    "PTH123", "ARG002", "RUF022",
]

[tool.basedpyright]
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnannotatedClassAttribute = "none"
reportCallInDefaultInitializer = "none"
reportImplicitOverride = "none"
reportUnusedCallResult = "none"
reportUnusedParameter = "none"
reportAny = "none"
