[metadata]
name = pytest_cs
version = 0.7.6
author = CrowdSec
author_email = core.tech@crowdsec.net
license = MIT
description = Pytest fixtures for crowdsec
long_description = file: README.md
long_description_content_type = text/markdown
url='https://github.com/crowdsecurity/pytest-cs',

[options]
# python_requires = >=3.6
packages =
    pytest_cs
    pytest_cs.lib

install_requires =
    pytest>=3.5.0
    docker
    requests
    trustme
    psutil
    pyyaml
    pytest
    pytest-datadir

[options.entry_points]
pytest11 =
    cs = pytest_cs

[options.packages.find]
exclude =
    tests
    __pycache__

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
#extend-ignore = 

[isort]
profile = black
known_first_party = pytest_cs
